# gero-vm

./: .gitignore  CMakeLists.txt  Makefile  README.md  configure
.github/workflows/: build_cmake.yml  ci.yml  dev.yml  release.yml
__tests__/: CMakeLists.txt  expressions.cpp
src/: Logger.h  gero-vm.cpp  jelly-vm.cpp
src/bytecode/: OpCode.h
src/compiler/: JellyCompiler.h
src/disassembler/: JellyDisassembler.h
src/parser/: JellyGrammar.bnf  JellyParser.h
src/vm/: GeroVM.h  Global.h  JellyVM.h  JellyValue.h
test/: CMakeLists.txt  binary-math.h  block-test.h  comparison-test.h  expression-test.h  global-variable.h  if-branch-test.h  loop-test.h  main.cpp  string-test.h
